# battleship

./: .gitignore  Cargo.toml
src/: board.rs  cell.rs  error.rs  main.rs  req_resp.rs  ship.rs  stream.rs  util.rs
src/net/: README.md  mod.rs
src/ship/: mod.rs  set.rs  state.rs
src/ui/: menu.rs  mod.rs  play.rs  setup.rs
