[package]
name = "battleship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "4"
thiserror = "1"
tokio = { version = "1", features = ["net", "signal", "rt-multi-thread", "macros", "io-util", "time", "sync"] }
vss = "0.1"
